<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Uploads</string>
    <string name="albumBtn">Album</string>
    <string name="songsBtn">Songs</string>
    <string name="searchBar">Search songs</string>
    <string name="uploadNewBtn">Upload new song</string>
    <string name="lonely">Lonely</string>
    <string name="HomeBtn">Home</string>
    <string name="MyLibraryBtn">MyLibrary</string>
    <string name="upgradeBtn">Upgrade</string>
    <string name="uploadBtn">Uploads</string>
    <string name="createNewBtn">Create New Album</string>
    <string name="sorry">Sorry</string>
    <string name="alone">Alone</string>
    <string name="worldOfWalker" tools:ignore="DuplicateDefinition">World Of Walker</string>
    <string name="differentWorld">Different World</string>
    <string name="songName">"Song Name : "</string>
    <string name="SongNameHint">This will be displayed</string>
    <string name="lang">Language :</string>
    <string name="langInput">Language of the song</string>
    <string name="genre">"Genre : "</string>
    <string name="genreInput">Genre of the song</string>
    <string name="photo">"Portrait Photo : "</string>
    <string name="photoInput">Choose image</string>
    <string name="audio">Upload Audio :</string>
    <string name="audioInput">Choose file</string>
    <string name="radioTxt1">Release as single song</string>
    <string name="radioTxt2">Add to existing album</string>
    <string name="album" tools:ignore="DuplicateDefinition">Select Album :</string>
    <string-array name="albumList">
        <item>World Of Walker</item>
        <item>Different World</item>
    </string-array>
    <string name="chkTxt">I agree to the terms of services and privacy policy</string>
    <string name="cancelBtn">Cancel</string>
    <string name="submitBtn">Upload</string>
    <string name="editSongInput">Sorry</string>
    <string name="editLangInput">English</string>
    <string name="editGenreInput">Electronic</string>
    <string name="updateBtn">Update</string>
    <string name="enterAlbum">Enter Album Name</string>
    <string name="albumUpload">Album</string>
    <string name="createNewAlbum">Great! Take First Step To Create Your Album</string>
    <string name="createAlbum">Create</string>
    <string name="editAlbumName">Edit Album Name</string>
    <string name="playMusic">Playing Music</string>
    <string name="artistNameAlan">Alan Walker</string>
    <string name="songname">Sorry</string>
    <string name="langGenre">English Electronic</string>
    <string name="artistName">Alan Walker</string>
    <string name="currentTime">0:56</string>
    <string name="endTime">3:10</string>
    <string name="song">Songs</string>
    <string name="album1">Album</string>
    <string name="search">Search Song</string>
    <string name="songDownload">Download Now</string>
    <string name="home">Home</string>
    <string name="library">MyLibrary</string>
    <string name="upgrade">Upgrade</string>
    <string name="upload">Uploads</string>
    <string name="albumDownload">Download Now</string>
    <string name="aloneSong">Lonely</string>
    <string name="sorrySong">Sorry</string>
    <string name="worldOfWalker1">World Of Walker</string>
    <string name="differentWorldAlbum">Different World</string>
    <string name="lonelySong">Lonely</string>
    <string name="editSong">Edit Song Name</string>
    <string name="editSongName">Enter Song Name</string>
    <string name="updateBtn1">Update</string>
    <string name="editAlbumName1">Edit Album Name</string>
    <string name="enterAlbum1">Enter Album Name</string>
    <string name="updateAlbum">Update</string>
    <string name="worldOfWalkerAlbum">World Of Walker</string>
    <string name="myLibrary">Your Library</string>
    <string name="music">Music</string>
    <string name="playList">Playlists</string>
    <string name="createPlaylist">Create New Playlist</string>
    <string name="downloads">Downloads</string>
    <string name="favourites">Favourites</string>
    <string name="cancelBtn1">Cancel</string>
    <string name="hi">Hi!</string>
    <string name="welcome">Welcome, Start Listening!</string>
    <string name="searchSong">Search Songs</string>
    <string name="searchAlbum">Search Albums</string>
    <string name="trending">Trending Songs</string>
    <string name="viewAll">View All</string>
    <string name="hindi">Hindi</string>
    <string name="category">Categories</string>
    <string name="pop">Pop</string>
    <string name="jazz">Jazz</string>
    <string name="classic">Classic</string>
    <string name="playMusic1">Playing Music</string>
    <string name="artistNameAlan1">Alan Walker</string>
    <string name="songname1">Sorry</string>
    <string name="langGenre1">English Electronic</string>
    <string name="artistName1">Alan Walker</string>
    <string name="currentTime1">0:56</string>
    <string name="endTime1">3:10</string>
    <string name="signin">"Sign  In "</string>
    <string name="Msg">Hi there, nice to see you again!</string>
    <string name="eMail">Email</string>
    <string name="emailExample">example@gmail.com</string>
    <string name="pass">Password</string>
    <string name="wordpass">Password</string>
    <string name="Button1">Sign In</string>
    <string name="Msg2">Don\'t have an account?</string>
    <string name="SignUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="inputName">Your Name</string>
    <string name="AccType">Type of Account</string>
    <string name="checkBox">I agree to the Terms Of Services and Privacy Policy</string>
    <string name="Button2">Continue</string>
    <string name="question">Have an account?</string>
    <string name="Link">Sign In</string>
    <string name="goBack">back</string>
    <string name="editBtn">editAccount</string>
    <string name="deleteBtn">Delete</string>
    <string name="logOut">Log Out</string>
    <string name="edit">Edit User Profile</string>
    <string name="Updateprof">Update User Profile</string>
    <string name="freeAcc">Free User</string>
    <string name="artistLabel">Artist</string>
    <string name="artViewUp">View Uploads</string>
    <string name="viewPlans">View Plan</string>
    <string name="Premium">Premium</string>
    <string name="upLabel">Upgrade to Premium</string>
    <string name="line1">Subscribe to ZornPlus for</string>
    <string name="line2">PREMIUM EXPERIENCE</string>
    <string name="premiumOffer">HD Music Streaming</string>
    <string name="downprop">Unlimited Downloads</string>
    <string name="bscPlan">Upgradetobasic</string>
    <string name="premmPlan">upgradetopremium</string>
    <string name="ultra">upgradetoultra</string>
    <string name="uploadArt">Unlimited Uploads</string>
    <string name="basicArtPlan">upgrade to basic artist plan</string>
    <string name="premArtPlan">upgrade to premium artist plan</string>
    <string name="ultraPremArtPlam">Upgrade to ultra premium artist plan</string>
    <string-array name="accTypes">
        <item>Free User</item>
        <item>Premium User</item>
        <item>Artist</item>
    </string-array>
<!--    <string name="home1">Home</string>-->
<!--    <string name="library1">MyLibrary</string>-->
<!--    <string name="upgrade1">Upgrade</string>-->
<!--    <string name="upload1">Upload</string>-->
    <string name="paymentLabel">Make Payment</string>
    <string name="yourPlanLabel">Your Plan</string>
    <string name="otpLabel">One Time Payment</string>
    <string name="todayLbl">Starting today</string>
    <string name="paydetailslbl">Payment Details</string>
    <string name="cardLabel">Credit Or Debit Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="expiryLbl">Expiry Date</string>
    <string name="security">Security Code</string>
    <string name="TAndC">I agree to The Terms And Conditions set by the Zorn Music Company</string>
    <string name="btnPayment">BUY NOW</string>
    <string name="viewPlanLabel">Your Plan</string>
    <string name="cancel">Cancel Subscription</string>
    <string name="upPlan">Upgrade Plan\\</string>
    <string name="upgradePlan">Upgrade Plan</string>
    <string name="renewP">Renew Plan</string>
    <string name="dropdown">Account Type</string>
    <string name="choosePlan">Choose Plan</string>
    <string name="app_name">Zorn</string>
    <string name="PlaylistS">Playlists</string>
    <string name="XSearchSong">Search Song</string>
    <string name="CreatePlaylist">+ Create New Playlist</string>
    <string name="AddBtn">+</string>
    <string name="CreaPlaylist">Create New Playlist</string>
    <string name="PlaylistName" />
    <string name="EnternameHere">Give a name to your playlist</string>
    <string name="CancelBtn">Cancel</string>
    <string name="CreateBtn">Create</string>
    <string name="SearchSong">" Search here"</string>
    <string name="NewSearch">Search Songs</string>
    <string name="PlaylistText1">Mind booster</string>
    <string name="PlaylistText2">90s Hits</string>
    <string name="PlaylistText3">Dream Pop</string>

    <string name="XuploadBtn">Upload</string>
    <string name="AddSongs">Add Songs</string>
    <string name="Songname1">A Whole New World</string>
    <string name="Songname2">Drivers License</string>
    <string name="EditPlName">Edit Playlist Name</string>
    <string name="DeletePlName">Delete Playlist</string>
    <string name="DownloadPlaylist">Download Playlist</string>

    <string name="addSongs" />
    <string name="addSongText" />
    <string name="addSongtext">Add Songs</string>
    <string name="AddsongstoPlaylistpg">Add Songs</string>
    <string name="Songname3">All Too Well</string>
    <string name="Songname4">Mozart Music</string>
    <string name="playlistnewname">Enter New Name Here</string>
    <string name="newnamevtext">Give a new name to your playlist</string>
    <string name="enternewname">Enter New Name Here</string>
    <string name="renamebtn">"Rename "</string>
    <string name="newnamebtn">Rename Playlist</string>

    <string-array name="planTypes">
        <item>Basic</item>
        <item>Premium </item>
        <item>Ultra Premium</item>
    </string-array>
</resources>

