<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PlaylistIF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#1c1a1a"
    tools:context=".PlaylistHome">

    <TextView
        android:id="@+id/PlaylisyS"
        android:layout_width="107dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/PlaylistS"
        android:textColor="#f44336"
        android:textSize="24sp"
        android:textStyle="bold"
         />

    <Button
        android:id="@+id/CreatePlaylist"
        android:layout_width="410dp"
        android:layout_height="55dp"
        android:layout_below="@id/Search"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1c1a1a"
        android:drawableLeft="@drawable/redcross"
        android:text="@string/CreaPlaylist"
        android:textColor="#f44336" />

    <SearchView
        android:id="@+id/Search"
        android:layout_width="411dp"
        android:layout_height="35dp"
        android:layout_below="@id/PlaylisyS"
        android:layout_marginTop="12dp"
        android:background="#4e4e50"
        android:queryHint="@string/NewSearch"

        />




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/black"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PLRecycleView"
        android:layout_width="409dp"
        android:layout_height="520dp"
        android:layout_below="@id/CreatePlaylist" />

</RelativeLayout>